--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
   position: absolute;
   width: 560px;
   height: 300px;
-  border: 1px solid black;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 
 .block {
