--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .block {
-  background-image: url(./brick.png);
+  background-image: url(./images/brick.png);
   background-size: 100px 20px;
   position: absolute;
   width: 100px;
@@ -34,7 +34,7 @@ body {
 }
 
 .user {
-  background-image: url(./stone.png);
+  background-image: url(./images/stone.png);
   background-size: 100px 20px;
   position: absolute;
   width: 100px;
@@ -42,7 +42,7 @@ body {
 }
 
 .ball {
-  background-image: url(./Red-Ball-PNG-Pic.png);
+  background-image: url(./images/Red-Ball-PNG-Pic.png);
   background-size: 20px 20px;
   background-position: cover;
   width: 20px;
@@ -77,7 +77,7 @@ button {
 
 button:hover {
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.687);
   box-shadow: 1px 3px 0 white, -10px -1px 0 white;
 }
 
